# gemini-testing

./: .gitignore  README.md  basic.py  cleanup.py  main.py  model_comparison_results.json  model_comparison_results.txt  model_comparison_results_x19b8801.json  model_comparison_results_x19b8801.txt  pyproject.toml  scratch.py  test.py
.ipynb_checkpoints/: evan-checkpoint.ipynb
cached_images/: manual_130_numbered_cache_info.json  uploaded_filenames.json
experiments/: model_comparison_results_45fc05dd.json  model_comparison_results_45fc05dd.txt  model_comparison_results_x6361764.json  model_comparison_results_x6361764.txt
notebooks/: long-context.ipynb
scripts/: preprocess.py
