[project]
name = "michael"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.3",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pypdf2>=3.0.1",
    "reportlab>=4.2.5",
]
